# nova-backend

./: .gitignore  main.py  pyproject.toml  requirements.txt
docs/: agentic_tools_api.md  websocket_transcribe_api.md
prompting/: prompt_enums.py
src/controller/: nova_controller.py  transcribe_controller.py
src/dao/: __init__.py  base_dao.py  memory_chunk_dao.py  project_dao.py  responsibility_dao.py  tool_dao.py
src/harness/: agent_loop.py
src/model/: __init__.py  memory_chunk.py  project.py  responsibility.py  tool.py  tool_config.py
src/service/: __init__.py  claude_service.py  cursor_service.py  eleven_labs_service.py  github_service.py  nova_service.py  openai_service.py  project_service.py  responsibility_service.py  tool_registry.py  tool_service.py  tts_service.py  twilio_service.py  whisper_service.py
src/tools/: check_coding_agent.txt  check_prs.txt  code_planner.txt  get_current_time.txt  github_list_repos.txt  github_read_repo_code.txt  write_code.txt
tests/: manual_smoke_test_agentic_tools.py  test_conversation_loop.py  test_cursor_service.py  test_github_service.py  test_openai_loop.py  test_tool_registry.py  test_tool_service.py  test_tools_api.py
