[project]
name = "nova-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.7",
    "click==8.3.2",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "fastapi==0.135.3",
    "fastapi-cli==0.0.24",
    "fastapi-cloud-cli==0.16.0",
    "fastar==0.9.0",
    "filelock==3.25.2",
    "flask>=3.1.3",
    "fsspec==2026.3.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "idna==3.11",
    "jinja2==3.1.6",
    "jiter==0.13.0",
    "llvmlite==0.47.0",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "more-itertools==11.0.1",
    "mpmath==1.3.0",
    "networkx==3.6.1",
    "numba==0.65.0",
    "numpy==2.4.4",
    "openai==2.30.0",
    "openai-whisper==20250625",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-extra-types==2.11.2",
    "pydantic-settings==2.13.1",
    "pygments==2.20.0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.24",
    "pyyaml==6.0.3",
    "regex==2026.4.4",
    "requests==2.33.1",
    "rich==14.3.3",
    "rich-toolkit==0.19.7",
    "rignore==0.7.6",
    "sentry-sdk==2.57.0",
    "setuptools==81.0.0",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "sqlmodel>=0.0.39",
    "starlette==1.0.0",
    "supabase>=2.31.0",
    "sympy==1.14.0",
    "tiktoken==0.12.0",
    "torch==2.11.0",
    "tqdm==4.67.3",
    "twilio>=9.10.9",
    "typer==0.24.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uvicorn==0.44.0",
    "uvloop==0.22.1",
    "watchfiles==1.1.1",
    "websockets>=15,<16",
]
